# sudoku-in-haskell

./: .gitignore  Cell.hs  Cells.hs  Create.fr  Create.hs  Creater.fr  Creater.hs  CreaterForJava.fr  Digit.fr  Digit.hs  EasyPeasy.fr  EasyPeasy.hs  ExclusionSet.fr  ExclusionSet.hs  ExclusionSets.hs  Exclusions.hs  LICENSE.md  Layout.fr  Layout.hs  Main.java  Makefile  Min.fr  Min.hs  Next.fr  Next.hs  Pattern.fr  Pattern.hs  Placed.fr  Placed.hs  Placement.fr  Placement.hs  Possible.hs  Puzzle.fr  Puzzle.hs  README.md  Solution.fr  Solution.hs  Solve.fr  Solve.hs  Solver.fr  (+23 more)
app/: Create.hs  Solve.hs
src/: Creater.hs  EasyPeasy.hs  ExclusionSet.hs  Heuristic.hs  Next.hs  Puzzle.hs  Solver.hs  SolverUtil.hs  Unknown.hs  Util.hs
